--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Bookbinding Tutorial</title>
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
+      <h1>How I Make A Case-Bound Book with Coptic Stitches</h1>
+      <p>Case-Bound books are perfect for people who love those cozy writing moments. </p>
+      <img src = "fabric case bound.jpg" alt = "Book covered in green fabric">
+      <h2>Stitching</h2>
+      <p><div>Stitching is best done in signatures, which the basics of I won't cover in this 
+         blog. The intracasies of paper usage are very complex and take up a lot of time. 
+         For now, let's imagine that you have your paper ready for stitching in whatever size 
+         signatures is good for your project. 
+         For basic stitching you will need: <ol>
+            <li>An awl</li>
+            <li>A needle and thread</li>
+            <li>A pair of scissors</li>
+         </ol>
+         Once you have gathered your items, you will make evenly spaced marks on the folded 
+         edge of your signatures in whatever increments is good for your project. My preferred 
+         book size is 5x7, and I usually will make a mark 0.5 inches from the bottom and top edge, 
+         then fill the middle with evenly spaced 1 inch increments. Then, use the awl to pierce 
+         through the spine of each signature at that mark. Having each hole on each signature match 
+         up will be very important so measure carefully.</div>
+         
+      </p>
    </body>
 </html>
