--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Bookbinding Tutorial</title>
-   </head>
-   <body>
-      <h1>How I Make A Case-Bound Book with Coptic Stitches</h1>
-      <p>Case-Bound books are perfect for people who love those cozy writing moments. </p>
-      <img src = "fabric case bound.jpg" alt = "Book covered in green fabric">
-      <h2>Stitching</h2>
-      <p><div>Stitching is best done in signatures, which the basics of I won't cover in this 
-         blog. The intracasies of paper usage are very complex and take up a lot of time. 
+   <article>
+      <header> 
+         <head>
+            <title>Bookbinding Tutorial</title>
+         </head>
+         <body>
+            <h1>How I Make A Case-Bound Book with Coptic Stitches</h1>
+            <p>Case-Bound books are perfect for people who love those cozy writing moments. <br> <br>
+               <figure>
+                  <img src = "images/fabriccasebound.jpg" alt = "Book covered in green fabric" width="1000" height="600">
+                  <figcaption> Photo taken by author. </figcaption>
+               </figure> </p>
+      </header>
+         <h2>Stitching</h2>
+         <p><div>Stitching is best done in signatures, which the basics of I won't cover in this 
+         blog. The intricacies of paper usage are very complex and take up a lot of time. 
          For now, let's imagine that you have your paper ready for stitching in whatever size 
          signatures is good for your project. 
          For basic stitching you will need: <ol>
-            <li>An awl</li>
-            <li>A needle and thread</li>
-            <li>A pair of scissors</li>
+            <li>An awl &amp; </li>
+            <li>A needle and thread &amp; </li>
+            <li>A pair of scissors </li>
          </ol>
          Once you have gathered your items, you will make evenly spaced marks on the folded 
          edge of your signatures in whatever increments is good for your project. My preferred 
          book size is 5x7, and I usually will make a mark 0.5 inches from the bottom and top edge, 
          then fill the middle with evenly spaced 1 inch increments. Then, use the awl to pierce 
          through the spine of each signature at that mark. Having each hole on each signature match 
-         up will be very important so measure carefully.</div>
+         up will be very important so measure carefully. <br> <br>
+         <figure>
+            <img src = "images/papercasebound.JPG" alt = "Paper covered book" width = "600" height = "600">
+            <figcaption>
+               Photo taken by author.
+            </figcaption>
+
+         </figure>
+
          
-      </p>
-   </body>
+
+         <br>
+         <br>
+         Then, you will measure out a length of thread that is 10x the length of the edge of your book.
+         Once your needle is threaded, start from the inside signature of the last page, from the last hole.
+         Weave in and out normally, up the length of the signature and then down. This way, each hole has a 
+         thread coming out of it. Once the first signature is done, line up your second to match exactly with the 
+         first. This is where the coptic stitch starts. <ol>
+         <li> Start your thread from the inside of the second signature.</li>
+         <li> Once it has come out of the other side, weave the thread through the two pre-existing threads that
+            connect the holes of the first signature. This will create a knot.</li>
+         <li> Then, put the needle back through the hole you first came out of.</li>
+         <li> Finally, move on to the next hole within the inside of the signature to repeat this process.</li>
+         </ol>
+      
+      </div>
+         </p>
+         <h1>Contact</h1>
+         <footer>
+            <p>Author: Lyss Bezner &copy <br>
+            <a href= "mailto: hello@launchcode.com">Email Lyss here!</a> 
+         </p>
+         </footer>
+      </body>
+   </article>
 </html>
